--- a/frontend/index.html
+++ b/frontend/index.html
@@ -361,10 +361,11 @@
 
       function setCurrentWeek() {
         const today = new Date();
+        const referenceDate = new Date(today);
         const day = today.getDay();
-        day.setDate(today.getDate() + (day === 6 ? 2 : day === 0 ? 1 : 0));
-        const year = day.getFullYear();
-        const week = getWeekNumber(day);
+        referenceDate.setDate(today.getDate() + (day === 6 ? 2 : day === 0 ? 1 : 0));
+        const year = referenceDate.getFullYear();
+        const week = getWeekNumber(referenceDate);
         document.getElementById("weekPicker").value = `${year}-W${String(week).padStart(2, '0')}`;
       }
 
